# C_gtk

./: .gitignore  GTKPlot.glade  app.c  main.c  main.py  note.ipynb
include/: app.h
libs/c/: CMakeLists.txt  app.c  main.c
libs/c/include/: app.h
libs/cairo_drawing_example/: CMakeLists.txt  main.c
